More jspeicify nullability changes in spring-kafka-test